k8s/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghanawaters-frontend-service
spec:
  selector:
    app: ghanawaters-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
